2006-10-17 [colin]	2.5.5cvs12

	* src/compose.c
		Compare addresses case-insensitive

2006-10-17 [colin]	2.5.5cvs11

	* src/plugins/pgpcore/sgpgme.c
		Fix return status

2006-10-17 [colin]	2.5.5cvs10

	* src/plugins/pgpcore/pgp_viewer.c
		Fix return status

2006-10-17 [colin]	2.5.5cvs9

	* src/quote_fmt.c
		Fix a typo (thanks to Fabien)

2006-10-16 [colin]	2.5.5cvs8

	* src/textview.c
		Fix problem with quote-folding when emails
		don't convert cleanly to UTF-8

2006-10-14 [colin]	2.5.5cvs7

	* src/prefs_template.c
		Reset fields when reopening
		the window

2006-10-13 [paul]	2.5.5cvs6

	* manual/advanced.xml
	* src/prefs_message.c
		make 'respect_flowed_format' a hidden
		option, and add a manual entry for it
		Thanks to Colin

2006-10-12 [colin]	2.5.5cvs5

	* src/codeconv.c
		Revert part of 2.5.2cvs21:
		Don't optimise by reusing the 
		last iconv converter if possible:
		it seems slightly broken in a 
		very hard way to reproduce

2006-10-12 [colin]	2.5.5cvs4

	* src/prefs_common.c
	* src/prefs_common.h
	* src/prefs_message.c
	* src/procmime.c
		Fix bug 1035, 'Incorrect handling 
		of flowed lines'. We now optionnaly
		handle this format (preference is in
		Message View/Text options section)

2006-10-12 [colin]	2.5.5cvs3

	* po/POTFILES.in
		Add new file
	* src/plugins/pgpcore/pgp_viewer.c
	* src/plugins/pgpcore/sgpgme.c
		Don't try to import without asking

2006-10-12 [colin]	2.5.5cvs2

	* src/compose.c
		Fix bug 1036, 'Forwarding a mutlipart
		mail with a "text/html" block to ms
		outlook users leeds to freeze of
		outlook'. Poor outlook users...

2006-10-12 [paul]	2.5.5cvs1

	* NEWS
	* README
	* configure.ac
		Update version number following
		stable release

2006-10-11 [paul]	2.5.4cvs1

	* NEWS
	* README
	* configure.ac
		Update version number following
		stable release

2006-10-11 [paul]	2.5.3cvs32

	* src/textview.c
		fix bug 1032, 'Segmentation fault when showing
		message' (bug in quote folding)
		Thanks to Colin

2006-10-10 [colin]	2.5.3cvs31
